atualizando arquivos de configuração

--- a/package.json
+++ b/package.json
@@ -1,28 +1,36 @@
 {
-    "name": "piupiuwer-backend",
-    "version": "1.0.0",
-    "main": "index.js",
-    "repository": "https://github.com/TiagoMLucio/piupiuwer-backend.git",
-    "author": "TiagoMLucio <tiagolucio100@gmail.com>",
-    "license": "MIT",
-    "scripts": {
-        "build": "tsc",
-        "dev:server": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts"
-    },
-    "dependencies": {
-        "date-fns": "^2.28.0",
-        "express": "^4.18.1",
-        "morgan": "^1.10.0",
-        "uuid": "^8.3.2",
-        "uuidv4": "^6.2.13"
-    },
-    "devDependencies": {
-        "@types/date-fns": "^2.6.0",
-        "@types/express": "^4.17.13",
-        "@types/morgan": "^1.9.4",
-        "@types/uuid": "^8.3.4",
-        "@types/uuidv4": "^5.0.0",
-        "ts-node-dev": "^2.0.0",
-        "typescript": "^4.7.4"
-    }
+  "name": "piupiuwer-backend",
+  "version": "1.0.0",
+  "main": "dist/server.js",
+  "repository": "COLOCAR SEU LINK DE REPOSITORIO AQUI",
+  "author": "SEU NOME AQUI <SEU EMAIL AQUI>",
+  "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "lint": "eslint . --ext .ts",
+    "format": "prettier --write ."
+  },
+  "dependencies": {
+    "date-fns": "^2.30.0",
+    "express": "^4.18.4",
+    "morgan": "^1.10.0",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/date-fns": "^2.6.0",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^22.15.3",
+    "@types/uuid": "^9.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "prettier": "^3.2.5",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.3"
+  }
 }
