--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "SEU NOME AQUI <SEU EMAIL AQUI>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev:server": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
     "lint": "eslint . --ext .ts",
@@ -31,6 +31,6 @@
     "eslint-plugin-import": "^2.29.1",
     "prettier": "^3.2.5",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "5.3.3"
   }
 }
